<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#363636">

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            android:layout_gravity="center"
            ads:adUnitId="@string/banner_ad_unit_id"/>

    <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0"
            android:textColor="#8D7AC4"
            android:textStyle="bold"
            android:textSize="90sp"
            android:layout_marginTop="100sp"/>
    <Button
            android:id="@+id/drawButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/button_selector"
            android:layout_marginTop="50sp"
            android:text="@string/gen"
            android:textSize="50sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="40sp"
              android:layout_marginStart="40sp"
              android:layout_marginEnd="40sp"
              android:text="@string/range"
              android:textColor="#888888"
              android:textStyle="bold"
              android:textSize="20sp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp"
                  android:layout_marginStart="40sp"
                  android:layout_marginEnd="40sp">
        <EditText
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:text="0"
                android:background="#888888"
                android:textColor="#292929"
                android:textSize="20sp"
                android:inputType="number"
                android:singleLine="true"
                android:layout_weight="4.5" android:autofillHints=""/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="~"
                  android:textColor="#888888"
                  android:textAlignment="center"
                 android:textSize="20sp" android:layout_weight="1"/>
        <EditText
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="0"
                android:textSize="20sp"
                android:textColor="#292929"
                android:background="#888888"
                android:inputType="number"
                android:singleLine="true"
                android:layout_weight="4.5" android:autofillHints="" android:layout_marginStart="20sp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp" android:layout_marginStart="10sp" android:layout_marginEnd="10sp">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/lottery_range" android:id="@+id/lottery"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
        <Button android:id="@+id/num_list_button" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@drawable/button_selector"
                android:textSize="20sp" android:text="@string/rn_list" android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>